1.Fix globalise problem. 2.Fix upload Api deprecation.